# cpp-playground

./: CMakeLists.txt
include/: safe_int_cast.h
include/classgraph/: Layout.h  LayoutIO.h  Swaps.h
src/classgraph/: Layout.cpp  LayoutIO.cpp
standalone/: ClassGraphOptimizer.cpp
test/classgraph/: BE27.json  tests.cpp
